force-app/main/default/objects/Shipment_Line_Credit_Order__c/Shipment_Line_Credit_Order__c.object-meta.xml
<CustomObject>
    <label>Shipment Line (Credit Order)</label>
    <nameField>
        <displayFormat>CO_SPL-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CO_Shipment_Line</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>