force-app/main/default/objects/Shipment_Line_Credit_Order__c/fields/Credit_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Credit_Order_Line__c</fullName>
    <label>Credit Order Line</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Credit_Order_Line__c.Credit_Order__c</field>
            <operation>equals</operation>
            <valueField>$Source.Credit_Order__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Credit_Order_Line__c</referenceTo>
    <relationshipLabel>CO_Shipment_Line</relationshipLabel>
    <relationshipName>CO_Shipment_Line</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>