force-app/main/default/objects/Shipment_Line_Credit_Order__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Selected Product is not Shippable.</errorMessage>
        <filterItems>
            <field>Product2.Shippable_Product__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>CO_Shipment_Line</relationshipLabel>
    <relationshipName>CO_Shipment_Line</relationshipName>
    <type>Lookup</type>
</CustomField>