force-app/main/default/objects/Shipment_Line_Credit_Order__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>AcctSeedERP__Sales_Order__c</referenceTo>
    <relationshipLabel>CO_Shipment_Line</relationshipLabel>
    <relationshipName>CO_Shipment_Line</relationshipName>
    <type>Lookup</type>
</CustomField>