force-app/main/default/objects/Shipment_Line_Credit_Order__c/fields/Sales_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Line__c</fullName>
    <formula>Credit_Order_Line__r.Sales_Order_Line__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order Line</label>
    <type>Text</type>
</CustomField>