force-app/main/default/objects/Shipment_Line_Credit_Order__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <label>Shipment</label>
    <referenceTo>AcctSeedERP__Shipment__c</referenceTo>
    <relationshipLabel>Credit Order Shipment Line</relationshipLabel>
    <relationshipName>CO_Shipment_Line</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>