force-app/main/default/objects/Shipment_Line_Credit_Order__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <formula>Credit_Order_Line__r.Size__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Size</label>
    <type>Text</type>
</CustomField>