force-app/main/default/objects/Shipment_Line_Credit_Order__c/validationRules/Cant_Add_If_Credit_Order_Not_Exist.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Add_If_Credit_Order_Not_Exist</fullName>
    <active>true</active>
    <errorConditionFormula>Shipment__r.Credit_Order__c == null</errorConditionFormula>
    <errorMessage>Credit Order shipment line can&apos;t be added to Shipment without related Credit Order.</errorMessage>
</ValidationRule>