force-app/main/default/objects/Shipment_Line_Credit_Order__c/validationRules/Quantity_Must_Be_Positive_And_Greater_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Must_Be_Positive_And_Greater_0</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity_Shipped__c &lt;= 0</errorConditionFormula>
    <errorMessage>Shipped quantity must be positive and greater 0.</errorMessage>
</ValidationRule>